%% Modelo de datos principal de Bastet
%% Dominio: architecture | Tipo: ER
erDiagram
    users ||--o{ bookings : "creates"
    users ||--o{ pets : "owns"
    pet_sitters ||--o{ bookings : "accepts"
    pet_sitters ||--o{ pet_sitter_services : "offers"
    bookings ||--|{ payments : "has"
    bookings }o--|| pet_sitter_services : "is for"

    users {
        uuid id PK
        string email
        string first_name
        string phone
        boolean is_active
        timestamp created_at
    }

    pets {
        uuid id PK
        uuid user_id FK
        string name
        string species
        string breed
        boolean is_neutered
        timestamp created_at
    }
